--- a/README
+++ b/README
@@ -1,64 +1,10 @@
-Yii Web Programming Framework
+POS Loket Pelangi
 =============================
 
-Thank you for choosing Yii - a high-performance component-based PHP framework.
+Selamat Datang di POS Loket Pelangi. POS Loket Pelangi merupakan 
+salah satu 'alat pembantu' untuk mengaktualisasikan Q.S Al-A'Alaq 1-5.
+
+Untuk informasi lebih lanjut tentang usaha mengaktualisasikan Q.S Al-A'Alaq 1-5
+yang dilakukan oleh "Negeri Pelangi", silahkan kunjungi : http://negeripelangi.org/id/blog/2012/02/26/proyek-al-alaq-1-5 
 
 
-INSTALLATION
-------------
-
-Please make sure the release file is unpacked under a Web-accessible
-directory. You shall see the following files and directories:
-
-      demos/               demos
-      framework/           framework source files
-      requirements/        requirement checker
-      CHANGELOG            describing changes in every Yii release
-      LICENSE              license of Yii
-      README               this file
-      UPGRADE              upgrading instructions
-
-
-REQUIREMENTS
-------------
-
-The minimum requirement by Yii is that your Web server supports
-PHP 5.1.0 or above. Yii has been tested with Apache HTTP server
-on Windows and Linux operating systems.
-
-Please access the following URL to check if your Web server reaches
-the requirements by Yii, assuming "YiiPath" is where Yii is installed:
-
-      http://hostname/YiiPath/requirements/index.php
-
-
-QUICK START
------------
-
-Yii comes with a command line tool called "yiic" that can create
-a skeleton Yii application for you to start with.
-
-On command line, type in the following commands:
-
-        $ cd YiiPath/framework                (Linux)
-        cd YiiPath\framework                  (Windows)
-
-        $ ./yiic webapp ../testdrive          (Linux)
-        yiic webapp ..\testdrive              (Windows)
-
-The new Yii application will be created at "YiiPath/testdrive".
-You can access it with the following URL:
-
-        http://hostname/YiiPath/testdrive/index.php
-
-
-WHAT's NEXT
------------
-
-Please visit the project website for tutorials, class reference
-and join discussions with other Yii users.
-
-
-
-The Yii Developer Team
-http://www.yiiframework.com
